--- a/exercise6&7.html
+++ b/exercise6&7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navbar</title>
+    <title>UltraEdit</title>
     <link rel="stylesheet" href="exercise6&7.css">
 </head>
 
